# MeowKey

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
boards/include/boards/: meowkey_rp2350_usb.h
docs/: architecture.md  building.md  debug-interface.md  known-gaps.md  release.md  secure-firmware-flashing.md  security-model.md  security.md
gui/: app.js  index.html  styles.css
keys/: README.md
native-rs/meowkey-manager/: Cargo.toml  README.md
native-rs/meowkey-manager/src/: app.rs  cbor.rs  main.rs  manager_usb.rs  models.rs  release_updates.rs  transport.rs
native/MeowKey.Manager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
scripts/: board-presets.json  build.ps1  check.ps1  flash.ps1  flash.sh  gui.ps1  gui_server.py  probe-board.ps1  release-artifacts.py  run-manager.ps1  verify-manager-contract.py
src/: board_id.c  board_id.h  board_probe.c  board_probe.h  cbor.c  cbor.h  client_pin.c  client_pin.h  credential_store.c  credential_store.h  ctap2.c  ctap2.h  ctap_hid.c  ctap_hid.h  diagnostics.c  diagnostics.h  main.c  manager_channel.c  manager_channel.h  mbedtls_compat.c  meowkey_build_config.h.in  meowkey_mbedtls_config.h  probe_main.c  security_status.c  security_status.h  tusb_config.h  usb_descriptors.c  user_presence.c  user_presence.h  webauthn.c  webauthn.h
tests/manager-attack-harness/: Program.cs
windows/driver/manager-winusb/: README.md  install-manager-driver.cmd  install-manager-driver.ps1  meowkey-manager-driver-test.cer  meowkey-manager-winusb.cat  meowkey-manager-winusb.inf  new-manager-driver-cert.ps1  sign-manager-driver.ps1
windows/gui/MeowKey.Manager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MeowKey.Manager.csproj  README.md
windows/gui/MeowKey.Manager/Models/: ConnectedDeviceInfo.cs  ManagerModels.cs
windows/gui/MeowKey.Manager/Pages/: ActivityPage.xaml  ActivityPage.xaml.cs  CredentialsPage.xaml  CredentialsPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  DevicesPage.xaml  DevicesPage.xaml.cs  MaintenancePage.xaml  MaintenancePage.xaml.cs  SecurityPage.xaml  SecurityPage.xaml.cs
windows/gui/MeowKey.Manager/Services/: LocalizationService.cs  ManagerDeviceService.cs  ManagerRepository.cs  ReleaseUpdateService.cs  WinUsbManagerTransport.cs
