[package]
name = "meowkey-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
eframe = "0.33"
egui = "0.33"
getrandom = "0.2"
hidapi = "2.6"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = true }
webbrowser = "1"
url = "2"
